test/conformance/chainsaw/deleting-policies/cel-lib/http-lib/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
spec:
  containers:
  - image: public.ecr.aws/docker/library/nginx:latest
    name: example
