test/conformance/chainsaw/deleting-policies/cel-lib/http-lib/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deleting-policy-http-lib
spec:
  concurrent: false
  steps:
    - name: step-01
      try: 
        - apply:
            file: rbac.yaml
        - apply:
            file: http-pod.yaml
        - apply:
            file: service.yaml
        - assert:
            timeout: 120s
            resource:
              apiVersion: v1
              kind: Pod
              metadata:
                name: test-api
                namespace: default
              status:
                (conditions[?type == 'Ready']):
                - status: "True"
    - name: step-02
      try:
        - apply:
            file: pod.yaml

    - name: step-03
      try:
        - apply:
            file: policy.yaml

    - name: step-04
      try:
        - sleep:
            duration: 65s
            
    - name: step-05
      try:
        - error:
            file: pod-assert.yaml
